--- a/index.html
+++ b/index.html
@@ -1,50 +1,50 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main.css">
 	<title>Insert title here</title>
 </head>
 
 <body>
 
 	<div class="container">
+
 		<div class="row">
+
 			<div class="col-md-12" id="logo-cont">
 				<img src="img/logo.png" id="logo-img" alt="Sun" /><span id="logo">Weather App</span>
 
 				<nav class="navbar navbar-default">
-
-					<a href="">Начало</a> | <a href="">Приятели</a> | <a href="">Приятели</a> | <a href="profile.html">Профил</a> <a href="index.html">Изход</a>
+					<ul>
+						<a href="">Начало</a> | <a href="">Приятели</a> | <a href="">Email</a> | <a href="profile.html">Профил</a> | <a href="index.html">Изход</a>
+					</ul>
 				</nav>
-				<div>
-					<h1>Моят профил</h1>
-					<div>
+			</div>
+
+			<div>
 
 
-						<form>
-							<div>
 
-								<img src="img/user.jpg" alt="Потрбител" id="user">
+				<h1>Моят профил</h1>
+			</div>
+			<div>
 
-							</div>
-							<div id="panel">
-								Потребител <input type="text" name="user"><br>
-								Парола <input type="password" name="pass"><br>
-							</div>
-							<div>
-								Email <input type="email" name="email"><br>
-								Повтори парола <input type="password" name="pass2"><br>
-							</div>
-							<input type="button" value="Запази">
-						</form>
-					</div>
-				</div>
+				<img src="img/user.jpg" alt="Потрбител" id="user">
+			</div>
+
+			<div class="panel">
+				Потребител <input type="text" name="user" id="newuser"><br> Email <input type="email" name="email" id="email"><br> Парола <input type="password" name="pass" id="pass"><br> Повтори парола <input type="password" name="pass2" id="second pass"><br>
+
+				<input type="button" value="Запази" id="savebutton">
+				</form>
 			</div>
 		</div>
+	</div>
+	</div>
+	</div>
 </body>
 
 </html>
