--- a/finish.html
+++ b/finish.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Insert title here</title>
-<link href="assets/css/main.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
 	<style>
 #logo-cont {
 	background-color: green;
