--- a/index.html
+++ b/index.html
@@ -35,8 +35,23 @@
 				<img src="img/user.jpg" alt="Потрбител" id="user">
 			</div>
 
-			<div class="panel">
-				Потребител <input type="text" name="user" id="newuser"><br> Email <input type="email" name="email" id="email"><br> Парола <input type="password" name="pass" id="pass"><br> Повтори парола <input type="password" name="pass2" id="second pass"><br>
+			<div class="form col-md-5" style="vertical-align: top;">
+			<form>
+				<div class="form-group">
+					<label for="username">Потребител</label>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-user"></i></span>
+						<input class="form-control" type="text" name="username" id="username" placeholder="потребител">
+					</div>
+
+					<div class="form-group">
+				 	 <label for="pass">Парола</label>
+				 	 <div class="input-group">
+						 <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+						 <input class="form-control" type="password" name="pass" id="pass" placeholder="парола">
+			 		 </div>
+				 </div>
+
 
 				<input type="button" value="Запази" id="savebutton">
 				</form>
