--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <html>
 
 <head>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
-	<title>Insert title here</title>
+	<title>3d Printer Shop</title>
 </head>
+
+
+
 
 <body>
 
@@ -15,50 +20,60 @@
 		<div class="row">
 
 			<div class="col-md-12" id="logo-cont">
-				<img src="img/logo.png" id="logo-img" alt="Sun" /><span id="logo">Weather App</span>
-
-				<nav class="navbar navbar-default">
-					<ul>
-						<a href="">Начало</a> | <a href="">Приятели</a> | <a href="">Email</a> | <a href="profile.html">Профил</a> | <a href="index.html">Изход</a>
-					</ul>
-				</nav>
-			</div>
-
-			<div>
+				<img src="img/3d-printer_02.png" height="<50px>" width="15%" id="logo-img" alt=3d /><span id="logo">3D Printers Shop</span>
 
 
 
-				<h1>Моят профил</h1>
-			</div>
-			<div>
 
-				<img src="img/user.jpg" alt="Потрбител" id="user">
-			</div>
 
-			<div class="form col-md-5" style="vertical-align: top;">
-				<form>
-					<div class="form-group">
-						<label for="username">Потребител</label>
-						<div class="input-group">
-							<span class="input-group-addon"><i class="fa fa-user"></i></span>
-							<input class="form-control" type="text" name="username" id="username" placeholder="потребител">
-						</div>
 
+				<ul>
+					<li><a class="active" href="#home">Home</a></li>
+					<li><a href="#3D Printers">3D Printers</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#models">Models</a></li>
+				</ul>
+
+
+
+
+
+
+
+
+				<div>
+									<h1 style="verdana">Моят профил</h1>
+				</div>
+				<div class="container">
+
+					<img src="img/user.jpg" alt="Потрбител" id="user">
+				</div>
+
+				<div class="form col-md-5" style="vertical-align: top;">
+					<form>
 						<div class="form-group">
-							<label for="pass">Парола</label>
+							<label for="username">Потребител</label>
 							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-								<input class="form-control" type="password" name="pass" id="pass" placeholder="парола">
+								<span class="input-group-addon"><i class="fa fa-user"></i></span>
+								<input class="form-control" type="text" name="username" id="username" placeholder="потребител">
 							</div>
-						</div>
+
+							<div class="form-group">
+								<label for="pass">Парола</label>
+								<div class="input-group">
+									<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+									<input class="form-control" type="password" name="pass" id="pass" placeholder="парола">
+								</div>
+							</div>
 
 
-						<input type="button" value="Запази" id="savebutton">
-				</form>
+							<input type="button" value="Запази" id="savebutton">
+					</form>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	</div>
 </body>
 
